# playground

SFML_template/untitled/: CMakeLists.txt  README.txt  main.cpp
catch2_template/: CMakeLists.txt  main.cpp
play/: README.txt  sam.py
play/boost/: README.cpp  README.cpp~
play/cocos2d-x/: README.txt  README.txt~
play/folly/: README.txt  a.out  try_format.cpp  try_format.cpp~
play/kivy/: .gitignore  .gitignore~  README.txt  README.txt~
play/primer/: 1.11.cpp~  1.9.cpp  2.1.2.cpp  2.1.2.cpp~  2.13.cpp  2.13.cpp~  2.14.cpp  2.16.cpp  2.16.cpp~  2.17.cpp  2.20.cpp  2.21.cpp  2.27.cpp  2.29.cpp~  2.32.cpp  2.39.cpp  2.9.cpp  3.2.cpp  3.4.cpp  a.out  wrinkle.cpp  wrinkle.cpp~
play/pyside/: README.txt  simple.py  t5.py
quick_template/: CMakeLists.txt  README.md  main.cpp
